deploy/echo-spring-backend-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: echo-spring-backend
    app: echo-spring-backend
  name: echo-spring-backend
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      service: echo-spring-backend
      app: echo-spring-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: echo-spring-backend
        app: echo-spring-backend
    spec:
      containers:
      - image: victorpupim/echo-spring-backend:latest
        name: echo-spring-backend
        resources:
          requests:
            memory: "2Gi"
            cpu: "2.0"
          limits:
            memory: "3.5Gi"
            cpu: "3.5"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: echo-spring-backend
    app: echo-spring-backend
  name: echo-spring-backend
  namespace: backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    service: echo-spring-backend
    app: echo-spring-backend
  type: NodePort
status:
  loadBalancer: {}
