deploy/echo-spring-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: echo-spring
    app: echo-spring
  name: echo-spring
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      service: echo-spring
      app: echo-spring
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: echo-spring
        app: echo-spring
    spec:
      containers:
      - image: victorpupim/echo-spring:latest
        name: echo-spring
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
          limits:
            memory: "3.5Gi"
            cpu: "3.5"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: echo-spring
    app: echo-spring
  name: echo-spring
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    service: echo-spring
    app: echo-spring
  type: NodePort
status:
  loadBalancer: {}
