deploy/echo-spring-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echo-spring-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-spring-vs
spec:
  hosts:
  - "*"
  gateways:
  - echo-spring-gateway
  http:
  - match:
    - uri:
        prefix: /echo-spring
    route:
    - destination:
        host: echo-spring
        port:
          number: 80
