deploy/echo-spring-ingress-gcp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-spring-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer 
spec:
  ingressClassName: nginx
  rules:
  - host: cluster1-gcp.h2o-2-950.h2o.vmware.com
    http:
      paths:
      - backend:
          service:
            name: echo-spring
            port:
              number: 80
        path: /echo-spring
        pathType: Prefix
  tls:
  - hosts:
    - cluster1-gcp.h2o-2-950.h2o.vmware.com
    secretName: cluster1-ca-cert
status:
  loadBalancer: {}
