deploy/echo-spring-ingress-tkg-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-spring-ingress
  namespace: echo-web
spec:
  ingressClassName: nginx
  rules:
  - host: cluster01-dev-k.h2o-2-950.h2o.vmware.com
    http:
      paths:
      - backend:
          service:
            name: echo-spring
            port:
              number: 80
        path: /echo-spring
        pathType: Prefix
status:
  loadBalancer: {}
