deploy/echo-spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-spring-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: cluster01-dev.h2o-2-950.h2o.vmware.com
    http:
      paths:
      - backend:
          service:
            name: echo-spring
            port:
              number: 80
        path: /echo-spring
        pathType: Prefix
  tls:
  - hosts:
    - cluster01-dev.h2o-2-950.h2o.vmware.com
    secretName: cluster1-dev-ca-cert
status:
  loadBalancer: {}
